flux-config/base/capacitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
spec:
  parentRefs:
    - name: platform-private
      namespace: infrastructure
  hostnames:
    - "capacitor-${cluster_name}.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: capacitor
          port: 9000
